Fixed news info alignment

--- a/Maze game/Styles/style.css
+++ b/Maze game/Styles/style.css
@@ -266,8 +266,9 @@
 }
 
 .news-info {
-  padding: 15px;
+  padding: 20px;
   color: #ddd;
+  text-align: center;
 }
 
 .tag {
